--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
   --Dark-Blue: hsl(213, 19%, 18%);
   --Very-Dark-Blue: hsl(216, 12%, 8%);
 }
+.center-text {
+  text-align: center;
+}
 
 * {
   padding: 0;
@@ -30,7 +33,7 @@ body {
 
 .card {
   background: linear-gradient(hsl(213, 19%, 18%), hsl(216, 12%, 8%));
-  max-width: 360px;
+  width: 360px;
   height: 360px;
   border-radius: 2rem;
   box-shadow: rgba(53, 52, 52, 0.25) 3px 1px 8px;
@@ -40,6 +43,10 @@ body {
   display: flex;
   flex-direction: column;
   gap: 30px;
+}
+.massage-card {
+  display: flex;
+  align-items: center;
 }
 .text h2 {
   color: var(--White);
